# pdf-to-deeptutor

./: .gitignore  AGENTS.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
demos/inbox-sample/: README.md
docs/: ARCHITECTURE.md  DATA_MODEL.md  DEEPTUTOR_INTEGRATION.md  EXPORT_SPEC.md  PIPELINE.md  PRODUCT_SPEC.md  ROADMAP.md  VALIDATION.md  VLM_GEOMETRY.md
docs/decisions/: 2026-07-08-asset-localization.md  2026-07-08-evidence-typing.md  2026-07-08-manual-mineru.md  2026-07-08-outline-driven.md  README.md  (+7 more)
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json  manifest.json
outlines/: elementary-math-v1.yaml  sample-outline-v1.yaml
schemas/: export-plan.schema.json  geometry-item.schema.json  outline.schema.json  project-manifest.schema.json
scripts/: README.md  _diag_banner_check.py  _diag_chapter_body.py  _diag_chapter_item.py  _diag_dhash_template.py  classify_image_roles.py  init_inbox_meta.py  poll_mineru_task.py  rerun_late_stages.py  review.py  run_pipeline.py  submit_to_mineru.py
tests/: conftest.py  test_asset_localizer.py  test_bookview.py  test_bridges.py  test_classify_image_roles.py  test_describe.py  test_document_structure.py  test_downloader.py  test_export.py  test_export_planner.py  test_export_strategy.py  test_figure_role_cluster.py  test_figure_role_prefilter.py  test_figure_role_prefilter_runtime.py  test_figure_roles.py  test_geometry.py  test_geometry_renderer.py  test_image_to_heading.py  test_inbox_loader.py  test_items.py  test_markdown_layout_alignment.py  test_mineru_adapter.py  test_mineru_quota.py  test_mineru_submission.py  test_noise_filter.py  test_outline_loader.py  test_outline_matcher.py  test_pipeline_runner.py  test_preflight.py  test_rerun_late_stages.py  test_template_decor.py  test_vlm_resource_gate.py  test_workspace.py
(+78 files in other folders)
