[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-to-deeptutor"
version = "0.1.0"
description = "Local-first preprocessing tool that turns scanned PDFs into self-contained, outline-driven exports for DeepTutor import."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "pdf-to-deeptutor contributors"}]
keywords = ["pdf", "deeptutor", "ocr", "preprocessing", "outline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "markdown>=3.6",
    "pyyaml>=6.0",
    "fpdf2>=2.8",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "pypdf>=4.0",
]

[project.urls]
Homepage = "https://github.com/your-org/pdf-to-deeptutor"
Issues = "https://github.com/your-org/pdf-to-deeptutor/issues"

[project.scripts]
pdf2dt-init-meta = "pdf2dt.scripts.init_inbox_meta:main"
pdf2dt-run = "pdf2dt.scripts.run_pipeline:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.hatch.build.targets.wheel]
packages = ["src/pdf2dt"]
